<resources>
	<string name="app_name">DemoApplication</string>
	<string name="action_settings">Settings</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="login_button_text">Login</string>
	<string name="logout_button_text">Log out</string>
	<string name="revoke_button_text">Revoke</string>
	<string name="previous">Previous</string>

	<string name="welcome_text">Welcome</string>
	<string name="loading_text">Loading…</string>
	<string name="cancel_flow_button">Cancel flow</string>
	<string name="audience_input_helper_text">Audiences separated by space</string>
	<string name="audience_input_hint">Custom Audiences</string>
	<string name="toast_error_failed_open_intent">could not open Docs page for custom audiences</string>
	<string name="docs_url_custom_audiences">https://docs.strivacity.com/docs/oauth2-oidc-properties-setup#allowed-custom-audiences</string>
</resources>
